profilelist1exp/unpackaged/objects/SFDC_Acct_Plan__c.object
<CustomObject>
    <description>Overall goals, objectives, and challenges for penetrating an Account</description>
    <fields>
        <fullName>AE_Customer_1st_Half_Quota__c</fullName>
        <inlineHelpText>How much is sales management expecting you to close with this customer for the first 6 months of our Planning Year?</inlineHelpText>
        <label>AE Customer 1st Half Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AE_Customer_2nd_Half_Quota__c</fullName>
        <inlineHelpText>How much is sales management expecting you to close with this customer for the second 6 months of our Planning Year?</inlineHelpText>
        <label>AE Customer 2nd Half Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AGL_Attendance__c</fullName>
        <label>AGL/Workshop Attendance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Boomi</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>DCC</fullName>
                </value>
                <value>
                    <fullName>Dell badged VMware</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>GCN</fullName>
                </value>
                <value>
                    <fullName>Pivotal</fullName>
                </value>
                <value>
                    <fullName>RSA</fullName>
                </value>
                <value>
                    <fullName>Secureworks</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>UDS</fullName>
                </value>
                <value>
                    <fullName>Virtustream</fullName>
                </value>
                <value>
                    <fullName>VMware badged rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AGL_Date__c</fullName>
        <description>SOM R15.07 – This field show same value as “AGL Date” in Account object</description>
        <inlineHelpText>Enter the date when the AGL session or Workshop Date was held or when it will be held, if it has not yet taken place.</inlineHelpText>
        <label>Account Growth Lab (AGL)/Workshop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AGL_Stage__c</fullName>
        <label>AGL Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Planning</fullName>
                </value>
                <value>
                    <fullName>AGL Planning Session</fullName>
                </value>
                <value>
                    <fullName>AGL Complete</fullName>
                </value>
                <value>
                    <fullName>AGL follow up actions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AGL_Status_FY19__c</fullName>
        <description>US7067965 Account Planning: Reporting AGL Enhancement Logic - this field will be populated by code based on Focus Account and Planning Year field</description>
        <label>AGL Status FY19</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGL 2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AGL_Status_FY20__c</fullName>
        <description>US7067965 Account Planning: Reporting AGL Enhancement Logic - this field will be populated by code based on Focus Account and Planning Year field</description>
        <label>AGL Status FY20</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGL 2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AGL_Status_FY21__c</fullName>
        <description>US7067965 Account Planning: Reporting AGL Enhancement Logic - this field will be populated by code based on Focus Account and Planning Year field</description>
        <label>AGL Status FY21</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGL 2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AGL_Status__c</fullName>
        <description>US7067913 Account Planning: Reporting AGL Enhancement New Section and Fields</description>
        <label>AGL Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGL 2019</fullName>
                </value>
                <value>
                    <fullName>AGL 2020</fullName>
                </value>
                <value>
                    <fullName>AGL 2021</fullName>
                </value>
                <value>
                    <fullName>AGL 2022</fullName>
                </value>
                <value>
                    <fullName>AGL 2023</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AP_Lite_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Plan Lite Owner&apos;s Manager. Responsible to Approve Account Plan Lite</description>
        <label>AP Lite Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_PlansLite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Annual_IT_Spend__c</fullName>
        <inlineHelpText>How much is your customer budgeting for all related IT expenses during their fiscal year?</inlineHelpText>
        <label>Account Annual IT Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the Account Executive responsible for this Account Plan. Account Executive is responsible to submit the Account Plan for Approval.</inlineHelpText>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Financials_SalesWorks__c</fullName>
        <formula>HYPERLINK(&quot;http://salesworks.dell.com/#/PlanMyBusiness/Dashboard/Financial&quot;, &quot;http://salesworks.dell.com/#/PlanMyBusiness/Dashboard/Financial&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Financials (SalesWorks)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Fiscal_Year_End__c</fullName>
        <formula>Account__r.Fiscal_Year_End__c</formula>
        <label>Account Fiscal Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Fiscal_Year_End_formula__c</fullName>
        <formula>TEXT(DAY(Account_Fiscal_Year_End__c)) &amp;&apos; &apos;&amp; CASE(MONTH(Account_Fiscal_Year_End__c),
1,&quot;JAN &quot;,
2,&quot;FEB &quot;,
3,&quot;MAR &quot;,
4,&quot;APR &quot;,
5,&quot;MAY &quot;,
6,&quot;JUN &quot;,
7,&quot;JUL &quot;,
8,&quot;AUG &quot;,
9,&quot;SEP &quot;,
10,&quot;OCT &quot;,
11,&quot;NOV &quot;,
12,&quot;DEC &quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Fiscal Year End</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Growth_Lab_AGL__c</fullName>
        <description>SOM R15.07 – This field show same value as “Account Growth Lab (AGL)?” in Account object</description>
        <inlineHelpText>This field indicates whether an Account Growth Lab (AGL) has been held for the account. An AGL is a cross-BU event aimed at developing an actionable growth strategy for an account.</inlineHelpText>
        <label>Account Growth Lab (AGL)?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needed</fullName>
                </value>
                <value>
                    <fullName>In Planning</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Description__c</fullName>
        <description>Plan Description in Account Plan Lite</description>
        <label>Account Plan Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Plan_FY_Account_ID__c</fullName>
        <formula>TEXT(Plan_Starting_Fiscal_Year__c ) &amp;  Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan FY Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_ID__c</fullName>
        <displayFormat>AP-{0000000}</displayFormat>
        <label>Account Plan ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Lite_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Creator of the Account Plan Lite.</description>
        <label>Account Plan  Lite Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_PlansAqoX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Account Plan Owner is the person responsible for creating the Account Plan (may differ depending on Business Segment and Account Team setup)</inlineHelpText>
        <label>Account Plan Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Type__c</fullName>
        <description>Field created under FY20 USE Program (User Story ID 7215436)</description>
        <inlineHelpText>If this is a Specialist Account Plan, please select the team this is for</inlineHelpText>
        <label>Account Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>GCCS</fullName>
                </value>
                <value>
                    <fullName>UDS</fullName>
                </value>
                <value>
                    <fullName>MDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Systems_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Systems Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>R00N60000001PRP8EAO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actions_Available__c</fullName>
        <formula>IF(
OR(
CONTAINS($Profile.Name, &apos;Sales&apos;),
CONTAINS($Profile.Name, &apos;MSG Service Sales&apos;), 
CONTAINS($Profile.Name, &apos;GBL Dell Services&apos;),
CONTAINS($Profile.Name, &apos;IT TA User&apos;),
CONTAINS($Profile.Name, &apos;System Administrator&apos;),
CONTAINS($Profile.Name, &apos;Contract Manager&apos;),
CONTAINS($Profile.Name, &apos;Services/CEM Mgr&apos;),
CONTAINS($Profile.Name, &apos;Contract Senior Manager&apos;),
CONTAINS($Profile.Name, &apos;CRM Support&apos;),
CONTAINS($Profile.Name, &apos;Dashboard/Report Admin&apos;)
),
HYPERLINK(&apos;apex/PrintAccountPlan?Id=&apos; &amp; Id &amp; &apos;&amp;retURL=&apos; &amp; Id, IMAGE(&apos;servlet/servlet.FileDownload?file=015A0000000TepX&apos;,&apos;Print Account Plan&apos;)),
&apos;[No Action Available]&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_AE_Customer_Quota__c</fullName>
        <formula>AE_Customer_1st_Half_Quota__c +  AE_Customer_2nd_Half_Quota__c</formula>
        <inlineHelpText>Autocalculated from the first half and second half quotas</inlineHelpText>
        <label>Annual AE Customer Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Value_of_Strategies__c</fullName>
        <formula>Calculated_Annual_Value_of_Strategies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Value of Strategies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_IT_Spend_with_Dell__c</fullName>
        <inlineHelpText>What is your best guess of what this customer will spend with Dell?</inlineHelpText>
        <label>Anticipated IT Spend with Dell</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_by_Sales_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of Sales Manager that approved this account plan</inlineHelpText>
        <label>Approved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_Formula__c</fullName>
        <description>Field created under FY20 USE Program (User Story ID 7215436). Read-Only field that is automatically ticked when a user associates a File to the Account Plan</description>
        <formula>Attachment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created under FY20 USE Program (User Story ID 7215436).</description>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blueprints_Solutions__c</fullName>
        <inlineHelpText>Describe the specific goal for this area</inlineHelpText>
        <label>Blueprints/Solutions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Boomi_Rep_and_Email__c</fullName>
        <label>Boomi Rep and Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boomi__c</fullName>
        <label>Boomi</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <inlineHelpText>Autopopulated from Description field from the Account record</inlineHelpText>
        <label>Business Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inside Channel Account Manager</inlineHelpText>
        <label>CAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans4PpK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBR_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of Story 3528258:Add CBR Checkbox to Account Plan</description>
        <label>CBR Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS__c</fullName>
        <label>CS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Annual_Value_of_Strategies__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calculated Annual Value of Strategies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_S_P__c</fullName>
        <label>Client S&amp;P</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Strategy__c</fullName>
        <label>Client</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compute_Servers__c</fullName>
        <label>Compute (Servers)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_NPS_Results__c</fullName>
        <formula>Account__r.Current_NPS_Results__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current NPS Results</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Industry_Challenges__c</fullName>
        <inlineHelpText>Please indicate what industry challenges the customer is facing and/or is trying to overcome</inlineHelpText>
        <label>Customer Industry Challenges</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Technology_Initiatives__c</fullName>
        <label>Customer Technology Initiatives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DPS__c</fullName>
        <label>DPS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Center_Sales_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Center Sales Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans7Iuk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Approved_by_Sales_Management__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Attached_Formula__c</fullName>
        <description>Field created under FY20 USE Program (User Story ID 7215436). Read Only date field capturing the date on which a File is associated to the Account Plan</description>
        <formula>Date_Attached__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Attached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Attached__c</fullName>
        <description>Field created under FY20 USE Program (User Story ID 7215436).</description>
        <label>Date Attached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rejected__c</fullName>
        <description>Account Plan rejection date.</description>
        <label>Date Rejected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Approval__c</fullName>
        <label>Date Submitted for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DellEMC_Competitors_carried_by_Partners__c</fullName>
        <label>DellEMC Competitors carried by Partners</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dell_Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Dell Senior exec sponsoring the plan</inlineHelpText>
        <label>Dell Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dell_s_Value_Proposition__c</fullName>
        <inlineHelpText>What is our value proposition to the customer?
Why should we expect this customer to spend money with Dell?</inlineHelpText>
        <label>Dell&apos;s Value Proposition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Comments__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <label>Customer Business Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESG__c</fullName>
        <label>ESG</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name_1__c</fullName>
        <label>End User Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name_2__c</fullName>
        <label>End User Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name_3__c</fullName>
        <label>End User Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Infrastructure__c</fullName>
        <label>Enterprise Infrastructure</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <description>US7067913 Account Planning: Reporting AGL Enhancement New Section and Fields</description>
        <label>Financial Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY19</fullName>
                </value>
                <value>
                    <fullName>FY20</fullName>
                </value>
                <value>
                    <fullName>FY21</fullName>
                </value>
                <value>
                    <fullName>FY22</fullName>
                </value>
                <value>
                    <fullName>FY23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Focus_Account__c</fullName>
        <formula>TEXT(Account__r.Focus_Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Expansion__c</fullName>
        <inlineHelpText>Describe the specific goal for this area</inlineHelpText>
        <label>Geographic Coverage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geographical_Focus__c</fullName>
        <inlineHelpText>What geographical areas do the partner cover and how</inlineHelpText>
        <label>Geographical Focus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Go_To_Market_Approach_Comments__c</fullName>
        <inlineHelpText>Can you comment on the relationship type. ie. if Direct, why are we best suited?... if Indirect, type of partnership, why we are partnering, who are our partner(s) and what value do they add to the relationship?</inlineHelpText>
        <label>Partner Value Proposition(s)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Go_To_Market_Approach__c</fullName>
        <inlineHelpText>Do we work with this customer through an Indirect Channel partner or do we work direct?</inlineHelpText>
        <label>GTM Approach</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Direct &amp; Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Growth_Plan_Margin__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <formula>IF ( Last_4Q_Margin__c = 0 , 1, ( X4Q_Margin_Plan__c - Last_4Q_Margin__c ) / Last_4Q_Margin__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter values in % format. eg: Enter &apos;15&apos; in the field to indicate 15%</inlineHelpText>
        <label>Growth Plan (Margin)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Growth_Plan_Revenue__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <formula>IF ( Last_4Q_Revenue__c = 0 , 1, ( X4Q_Revenue_Plan__c - Last_4Q_Revenue__c ) / Last_4Q_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter values in % format. eg: Enter &apos;15&apos; in the field to indicate 15%</inlineHelpText>
        <label>Growth Plan (Revenue)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of Dell Inside Sales Representative supporting the customer. ISR will receive workflow emails updating them to the status of the Account Plan Approval.</inlineHelpText>
        <label>Inside Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_IT_Atlas_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is IT Atlas Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Goals_Long_Terms__c</fullName>
        <inlineHelpText>Describe the joint Dell and Partner overall goals for the long term (2-3 years)</inlineHelpText>
        <label>Joint Business Goals (13 - 36 months)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Goals_Short_Terms__c</fullName>
        <inlineHelpText>Describe the  Joint Dell and Partner overall goals for the short term ( 1 year)</inlineHelpText>
        <label>Joint Business Goals (0 - 12 Months)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOB_Expansion__c</fullName>
        <inlineHelpText>Describe the specific goal for this area</inlineHelpText>
        <label>LOB Expansion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Large_Scale_Related_Initiatives_Planned2__c</fullName>
        <description>This refers to Customer Technology Initiatives 2 from UI</description>
        <label>Initiative 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Large_Scale_Related_Initiatives_Planned3__c</fullName>
        <description>This refers to Customer Technology Initiatives 3 from UI</description>
        <label>Initiative 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Large_Scale_Related_Initiatives_Planned4__c</fullName>
        <description>This refers to Customer Technology Initiatives 4 from UI</description>
        <label>Initiative 4</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_4Q_Margin__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <inlineHelpText>Enter value in % format. e.g: Enter ‘15’ in the field to indicate 15%</inlineHelpText>
        <label>Last FY Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_4Q_Revenue__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <inlineHelpText>Enter value in standard currency</inlineHelpText>
        <label>Last FY Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_CS__c</fullName>
        <label>Last FY Rev - CS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_DSG__c</fullName>
        <label>Last FY Rev - DSG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_ESG__c</fullName>
        <label>Last FY Rev - ESG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Financed__c</fullName>
        <label>Last FY Rev - Financed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Full_Year__c</fullName>
        <label>Last FY Rev - Full Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Q1__c</fullName>
        <label>Last FY Rev - Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Q2__c</fullName>
        <label>Last FY Rev - Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Q3__c</fullName>
        <label>Last FY Rev - Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Services__c</fullName>
        <label>Last FY Rev - Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Main_point_of_contact_1__c</fullName>
        <label>Main point of contact 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_point_of_contact_2__c</fullName>
        <label>Main point of contact 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_point_of_contact_3__c</fullName>
        <label>Main point of contact 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is RSD/RSM for Channel/Partner Account Plan RT</description>
        <inlineHelpText>The Manager is the person responsible for approving the Plan</inlineHelpText>
        <label>Manager</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The current user in the “Manager” field is now an Inactive User, please update.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans4STv</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>